# BackdropQT

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: cmake.yml
src/: BackdropQT.cpp  BackdropQT.h  BackdropQT.ui  main.cpp
tests/: BasicHtmlTest.html  YTLivestream.html
tests/P5PerlinBar/: index.html  sketch.js  style.css
tests/loopedVideo/: README.md  index.html
